cargando estructura del menu mobila y del header

--- a/index.html
+++ b/index.html
@@ -11,10 +11,29 @@
 </head>
 <body>
     <header class="header">
-
+        <h1 class="header__title" title="Portal Noticia">
+            Portal Noticia
+        </h1>
+        <img src="icon/wave.svg" alt="" class="header__wave">
     </header>
     <nav class="nav">
-
+        <div class="nav__labels">
+            <label for="menu" class="nav__label">
+                <img src="icon/menu.svg" alt="" class="nav__logo-menu">
+            </label>
+        </div>
+        <input type="checkbox" id="menu" class="nav__input">
+        <div class="nav__links">
+            <a href="" class="nav__link">
+                INICIO
+            </a>
+            <a href="" class="nav__link">
+                SUSCRIBIRSE
+            </a>
+            <a href="" class="nav__link">
+                CONTACTO
+            </a>
+        </div>
     </nav>
     <main class="main">
 
