cargando diseño footer

--- a/index.html
+++ b/index.html
@@ -164,7 +164,27 @@
         </section>
     </main>
     <footer class="footer">
-
+        <div class="footer__row">
+            <h3 class="footer__title">
+                Copyright 2022 Portal Noticias | Todos los derechos reservados
+            </h3>
+        </div>
+        <div class="footer__row">
+            <div class="footer__redes">
+                <a href="" class="footer__rede">
+                    <img src="icon/twitter.svg" alt="" class="footer__logo">
+                </a>
+                <a href="" class="footer__rede">
+                    <img src="icon/facebook.svg" alt="" class="footer__logo">
+                </a>
+                <a href="" class="footer__rede">
+                    <img src="icon/instagram.svg" alt="" class="footer__logo">
+                </a>
+                <a href="" class="footer__rede">
+                    <img src="icon/youtube.svg" alt="" class="footer__logo">
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
