--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="" class="nav__link">
                 INICIO
             </a>
-            <a href="" class="nav__link">
+            <a href="suscribirse.html" class="nav__link">
                 SUSCRIBIRSE
             </a>
             <a href="" class="nav__link">
