Cargando parte de desktop

--- a/suscribirse.html
+++ b/suscribirse.html
@@ -40,7 +40,7 @@
                 <h1 class="card__title card__title--form">
                     Suscribite
                 </h1>
-                <p class="card__paragraph">
+                <p class="card__paragraph card__paragraph--from">
                     Suscribite y leé Portal Noticias sin límites
                 </p>
                 <div class="card__estructure">
