--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </a>
         </div>
     </nav>
+    <div class="flex">
         <main class="main">
             <section class="card">
                 <div class="card__header">
@@ -163,6 +164,12 @@
                 </div>
             </section>
         </main>
+        <aside class="aside aside--row1">
+            <div class="card card--aside"></div>
+        </aside>
+        <aside class="aside aside--row2">
+            <div class="card card--aside"></div>
+        </aside>
     </div>
     <footer class="footer">
         <div class="footer__row">
