Correccion de suscribirse.html

--- a/suscribirse.html
+++ b/suscribirse.html
@@ -35,7 +35,7 @@
             </a>
         </div>
     </nav>
-    <main class="main">
+    <main class="main main--form">
         <form action="" class="card card--form">
                 <h1 class="card__title card__title--form">
                     Suscribite
