--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/animation.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="icon/logo-noticias.svg" type="image/x-icon">
     <title>Portal Noticia</title>
 </head>
 <body>
