Correccion de direccion de img en las publicidades

--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
             </div>
             <div class="aside__publicity">
                 <a href="https://www.claro.com.ar/personas" class="aside__btn-publicity">
-                    <img src="/img/claro-navidad-gratis.gif" alt="" class="aside__publicity-img">
+                    <img src="img/claro-navidad-gratis.gif" alt="" class="aside__publicity-img">
                 </a>
             </div>
             <div class="aside__publicity">
                 <a href="https://mobile.twitter.com/ganacenas" class="aside__btn-publicity">
-                    <img src="/img/FSmkT9-X0AAEpl9.jpg" alt="" class="aside__publicity-img">
+                    <img src="img/FSmkT9-X0AAEpl9.jpg" alt="" class="aside__publicity-img">
                 </a>
             </div>
         </aside>
