cargando aside 2 de la web

--- a/index.html
+++ b/index.html
@@ -183,6 +183,29 @@
             </div>
         </aside>
         <aside class="aside aside--row2">
+            <div class="card card--aside">
+                <h2 class="card__title">Mas Noticias</h2>
+            </div>
+            <div class="card card--aside">
+                <a href="https://www.lanacion.com.ar/el-mundo/el-ultimo-batallon-atrincherado-en-la-aceria-de-mariupol-se-rinde-tras-mas-de-dos-meses-de-asedio-nid17052022/" class="card__cta">
+                    <img src="img/guerra-ucrania-rusia.webp" alt="" class="card__img">
+                    <h3 class="card__title card__title--h3">
+                        El último batallón atrincherado en la acería de Mariupol se rinde tras más de dos meses de asedio
+                    </h3>
+                </a>
+                <a href="https://www.a24.com/primiciasya/el-homenaje-diego-maradona-la-estrategia-telefe-que-claudia-villafane-y-veronica-ojeda-no-se-crucen-n1016972" class="card__cta">
+                    <img src="img/Homenaje-Diego-Maradona.webp" alt="" class="card__img">
+                    <h3 class="card__title card__title--h3">
+                        El homenaje a Diego Maradona: la estrategia de Telefe para que Claudia Villafañe y Verónica Ojeda no se crucen
+                    </h3>
+                </a>
+                <a href="https://www.ambito.com/informacion-general/transporte/se-cumple-el-paro-colectivos-el-interior-no-habra-el-viernes-si-el-miercoles-n5441207" class="card__cta">
+                    <img src="img/Paro-colectivo.webp" alt="" class="card__img">
+                    <h3 class="card__title card__title--h3">
+                        Se cumple el paro de colectivos en el Interior: no habrá transporte hasta el viernes (sí el miércoles)
+                    </h3>
+                </a>
+            </div>
         </aside>
     </div>
     <footer class="footer">
