--- a/suscribirse.html
+++ b/suscribirse.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
     <div class="flex">
-        <main class="main main--form">
+        <main class="main">
             <form action="" class="card card--form">
                     <h1 class="card__title card__title--form">
                         Suscribite
