Arreglo de Titulo card aside

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </aside>
         <aside class="aside aside--row2">
             <div class="card card--aside">
-                <h2 class="card__title">Mas Noticias</h2>
+                <h2 class="card__title card__title--aside-h2">Mas Noticias</h2>
             </div>
             <div class="card card--aside">
                 <a href="https://www.lanacion.com.ar/el-mundo/el-ultimo-batallon-atrincherado-en-la-aceria-de-mariupol-se-rinde-tras-mas-de-dos-meses-de-asedio-nid17052022/" class="card__cta">
